tests/snapshots/examples_fixtures/type_system__62_real_program_module_pipeline.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/62_real_program_module_pipeline.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E011]: PRIVATE MEMBER

Cannot access private member `map_list`.

  --> examples/type_system/62_real_program_module_pipeline.flx:17:32
   |
17 |     let labels: List<String> = C.map_list(rows, /p -> format_row(p))
   |                                ^^^^^^^^^^

Hint:
  Private members can only be accessed within the same module. Use `public fn` to export a function.
== stdout ==
<not executed>
